switch to local remark / issues with security

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </style>
   </head>
   <body>
-    <script src="http://gnab.github.io/remark/downloads/remark-latest.min.js"></script>
+    <script src="bower_components/remark/out/remark.js"></script>
     <script type="text/javascript">
       remark.create({
         highlightStyle: 'monokai',
